--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Charles Omonkhobhioria Enahoro  <enahoroomonkhobhioriacharles@gmail.com>
-ENOCK Nyakanba  <>
+Nyakanba  Omwega Enock <omwegaenock@gmail.com>
+
